chore: add rpi4 to builds pages

--- a/updatesv2/prod.template.html
+++ b/updatesv2/prod.template.html
@@ -299,6 +299,11 @@
                                 <td><a href="RECALBOX_BASE_URL/v2/upgrade/rpi3/recalbox-rpi3.img.xz?source=install">recalbox.img</a> <a href="RECALBOX_BASE_URL/v2/upgrade/rpi3/recalbox-rpi3.img.xz.sha1?source=install">(sha1)</a></td>
                             </tr>
                             <tr>
+                                <td>Raspberry Pi 4</td>
+                                <td>rpi4</td>
+                                <td><a href="RECALBOX_BASE_URL/v2/upgrade/rpi4/recalbox-rpi4.img.xz?source=install">recalbox.img</a> <a href="RECALBOX_BASE_URL/v2/upgrade/rpi4/recalbox$
+                            </tr>
+                            <tr>
                                 <td>PC 64 bits</td>
                                 <td>x86_64</td>
                                 <td><a href="RECALBOX_BASE_URL/v2/upgrade/x86_64/recalbox-x86_64.img.xz?source=install">recalbox.img</a> <a href="RECALBOX_BASE_URL/v2/upgrade/x86_64/recalbox-x86_64.img.xz.sha1?source=install">(sha1)</a></td>
