--- a/updatesv2/review.template.html
+++ b/updatesv2/review.template.html
@@ -304,6 +304,12 @@
                                 <td><a href="v2/upgrade/rpi3/root.tar.xz?source=install">root.tar.xz</a> <a href="v2/upgrade/rpi3/root.tar.xz.sha1?source=install">(sha1)</a></td>
                             </tr>
                             <tr>
+                                <td>Raspberry Pi 4</td>
+                                <td>rpi4</td>
+                                <td><a href="v2/upgrade/rpi4/boot.tar.xz?source=install">boot.tar.xz</a> <a href="v2/upgrade/rpi4/boot.tar.xz.sha1?source=install">(sha1)</a></td>
+                                <td><a href="v2/upgrade/rpi4/root.tar.xz?source=install">root.tar.xz</a> <a href="v2/upgrade/rpi4/root.tar.xz.sha1?source=install">(sha1)</a></td>
+                            </tr>
+                            <tr>
                                 <td>PC 64 bits</td>
                                 <td>x86_64</td>
                                 <td><a href="v2/upgrade/x86_64/boot.tar.xz?source=install">boot.tar.xz</a> <a href="v2/upgrade/x86_64/boot.tar.xz.sha1?source=install">(sha1)</a></td>
